Blog article + design added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <button id="main-compare-btn" class="compare-btn">compare</button>
 </section>
 
-<section class="action-grid">
+<section class="action-grid" id="action-grid">
   <h2>What do you want to do with Bitcoin?</h2>
   <div class="action-buttons">
     <button class="action-button" data-target="purchase-bitcoin">
@@ -285,10 +285,29 @@
   <div class="seo-slab seo-faq">
     <div class="inner">
       <h3>FAQs</h3>
-      <div class="faq-list">
-        <p><strong>How many services can I compare?</strong> Up to 2 on mobile and up to 3 on desktop.</p>
-        <p><strong>How do you decide what to show?</strong> We filter by your country and highlight Bitcoin-only tools with clear custody models and Lightning support.</p>
-        <p><strong>Are you independent?</strong> Yes. We don’t sell rankings.</p>
+      <div class="brand-faq">
+        <div class="faq-list">
+          <details>
+            <summary>How many services can I compare?</summary>
+            <div>
+              <p>Up to 2 on mobile and up to 3 on desktop.</p>
+            </div>
+          </details>
+
+          <details>
+            <summary>How do you decide what to show?</summary>
+            <div>
+              <p>We filter by your country and highlight Bitcoin-only tools with clear custody models and Lightning support.</p>
+            </div>
+          </details>
+
+          <details>
+            <summary>Are you independent?</summary>
+            <div>
+              <p>Yes. We don't sell rankings. Any referral support is clearly disclosed.</p>
+            </div>
+          </details>
+        </div>
       </div>
     </div>
   </div>
