--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -153,7 +153,7 @@
 <div class="comparison-table">
 
 <section id="tldr" class="service-section">
-  <h2 class="feature-label">TL;DR</h2>
+  <h2 class="feature-label">Quick verdict</h2>
   <div class="feature-value">
     <p><img src="/images/checkmark.svg" alt="positive icon" class="checkmark-icon"/> <strong>Best for:</strong> Mobile-first Lightning payments with self-custody and automated channel care.</p>
     <p><img src="/images/neutral.svg" alt="neutral icon" class="checkmark-icon"/> <strong>Consider if:</strong> You expect to receive euro Lightning tips without running your own node.</p>
@@ -167,7 +167,7 @@
 
       <div class="svc-compat__tile" id="setup-install">
         <div class="svc-compat__header">
-          <h3 class="svc-compat__title">Install and secure your wallet</h3>
+          <h3 class="svc-compat__title">1. Install and secure your wallet</h3>
         </div>
         <div class="migration-meta"><span class="migration-meta-chip">Time: ~5 min</span><span class="migration-meta-chip">Cost: Free</span><span class="migration-meta-chip">Risk: Low</span></div>
         <ol><li>Install Phoenix from App Store or Google Play (iOS 16+ or Android 8+)</li><li>Write down your 12-word seed on paper and store it away from your device</li><li>Enable biometric lock on your phone</li></ol>
@@ -175,7 +175,7 @@
       </div>
       <div class="svc-compat__tile" id="setup-receive">
         <div class="svc-compat__header">
-          <h3 class="svc-compat__title">Receive your first sats</h3>
+          <h3 class="svc-compat__title">2. Receive your first sats</h3>
         </div>
         <div class="migration-meta"><span class="migration-meta-chip">Time: ~2 min</span><span class="migration-meta-chip">Cost: ~1,000 sat + mining fee (first time)</span><span class="migration-meta-chip">Risk: Low</span></div>
         <ol><li>Tap Receive to generate a Lightning invoice</li><li>Share the QR code with your payer</li><li>Keep the app awake until payment settles</li></ol>
@@ -183,7 +183,7 @@
       </div>
       <div class="svc-compat__tile" id="setup-pay">
         <div class="svc-compat__header">
-          <h3 class="svc-compat__title">Make a payment</h3>
+          <h3 class="svc-compat__title">3. Make a payment</h3>
         </div>
         <div class="migration-meta"><span class="migration-meta-chip">Time: ~1 min</span><span class="migration-meta-chip">Cost: 0.4% + 4 sat</span><span class="migration-meta-chip">Risk: Low</span></div>
         <ol><li>Tap Send and scan or paste a Lightning invoice</li><li>Review the amount and memo, then confirm</li><li>Wait for the success banner (Phoenix retries automatically if needed)</li></ol>
@@ -424,6 +424,52 @@
           </div>
         </details>
       </div>
+  </div>
+</section>
+
+<section id="trust" class="service-section">
+  <h2 class="feature-label">Release &amp; Trust</h2>
+  <div class="svc-compat__grid">
+    <div>
+      <div class="feature-label sublabel">Last update</div>
+      <div class="svc-compat__tile" id="trust-update">
+        <div class="trust-card-body">
+          <img src="/images/update.svg" alt="" class="trust-card-icon" aria-hidden="true" />
+          <p class="trust-card-fact">October 2025</p>
+          <a href="https://apps.apple.com/app/phoenix-wallet/id1544097028" target="_blank" class="trust-card-link">Store page</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="feature-label sublabel">Publisher</div>
+      <div class="svc-compat__tile" id="trust-publisher">
+        <div class="trust-card-body">
+          <img src="/images/publisher.svg" alt="" class="trust-card-icon" aria-hidden="true" />
+          <p class="trust-card-fact">ACINQ</p>
+          <a href="https://apps.apple.com/developer/acinq/id1463814067" target="_blank" class="trust-card-link">Verify</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="feature-label sublabel">Open source</div>
+      <div class="svc-compat__tile" id="trust-source">
+        <div class="trust-card-body">
+          <img src="/images/opensource.svg" alt="" class="trust-card-icon" aria-hidden="true" />
+          <p class="trust-card-fact">Yes</p>
+          <a href="https://github.com/ACINQ/phoenix" target="_blank" class="trust-card-link">Repo</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="feature-label sublabel">Development activity</div>
+      <div class="svc-compat__tile" id="trust-activity">
+        <div class="trust-card-body">
+          <img src="/images/activity.svg" alt="" class="trust-card-icon" aria-hidden="true" />
+          <p class="trust-card-fact">Active in last 30 days</p>
+          <a href="https://github.com/ACINQ/phoenix/commits/master" target="_blank" class="trust-card-link">Commits</a>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
