Illustrations added to service pages

--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -196,6 +196,9 @@
   <h2 class="fees-title">Fees: what you pay and when</h2>
   <div class="fee-scenarios">
     <article class="fee-card" id="fees-pay">
+      <div class="svc-compat__illustration">
+        <img src="/images/illustration/pay-someone.svg" alt="Pay someone" loading="lazy" />
+      </div>
       <h3 class="fee-card__title">Pay someone</h3>
       <p class="fee-card__cost"><strong>0.4% of the amount + 4 sat</strong></p>
       <p class="fee-card__what">What happens:<br>Your payment routes over Lightning.</p>
@@ -206,6 +209,9 @@
         </details>
     </article>
     <article class="fee-card" id="fees-first-receive">
+      <div class="svc-compat__illustration">
+        <img src="/images/illustration/receive.svg" alt="First time you receive" loading="lazy" />
+      </div>
       <h3 class="fee-card__title">First time you receive</h3>
       <p class="fee-card__cost"><strong>≈1,000 sat channel creation + current <a href="#term-mining-fee" class="glossary-link" data-term="Mining fee">mining fee</a></strong></p>
       <p class="fee-card__what">What happens:<br>Phoenix opens a Lightning channel so you can receive payments.</p>
@@ -216,6 +222,9 @@
         </details>
     </article>
     <article class="fee-card" id="fees-splice">
+      <div class="svc-compat__illustration">
+        <img src="/images/illustration/big-receive.svg" alt="Big receive" loading="lazy" />
+      </div>
       <h3 class="fee-card__title">Big receive</h3>
       <p class="fee-card__cost"><strong>1% of the amount + <a href="#term-mining-fee" class="glossary-link" data-term="Mining fee">mining fee</a> (<a href="#term-splice-in" class="glossary-link" data-term="Splice-in">splice-in</a>)</strong></p>
       <p class="fee-card__what">What happens:<br>Phoenix resizes your channel to accept more sats than current capacity allows.</p>
@@ -322,6 +331,9 @@
   <div class="svc-compat__grid">
 
       <div class="svc-compat__tile">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/pay-any-lightning-qr.svg" alt="Scan a Lightning QR; wallet pays" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Pay any Lightning QR</h3>
           <span class="svc-chip svc-chip--works">Works</span>
@@ -338,6 +350,9 @@
         </details>
       </div>
       <div class="svc-compat__tile">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/withdraw-from-service.svg" alt="Tap or scan the withdrawal QR from the service" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Withdraw from services</h3>
           <span class="svc-chip svc-chip--works">Works</span>
@@ -354,6 +369,9 @@
         </details>
       </div>
       <div class="svc-compat__tile">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/lightning-address.svg" alt="Ask a friend for their Lightning address" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Lightning addresses</h3>
           <span class="svc-chip svc-chip--works">Works</span>
@@ -376,7 +394,10 @@
   <h2 class="feature-label">Move your Phoenix wallet or funds</h2>
   <div class="svc-compat__grid">
 
-      <div class="svc-compat__tile" id="restore-phoenix">
+      <div class="svc-compat__tile" id="restore-same-wallet">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/restore-wallet-new-phone.svg" alt="Restore wallet on new device" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Restore Phoenix on a new phone</h3>
         </div>
@@ -389,6 +410,9 @@
         </details>
       </div>
       <div class="svc-compat__tile" id="move-from-another-wallet">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/move-from-another-wallet.svg" alt="Move wallet from another wallet" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Another wallet → to Phoenix</h3>
         </div>
@@ -401,6 +425,9 @@
         </details>
       </div>
       <div class="svc-compat__tile" id="move-to-onchain">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/wallet-to-cold-wallet.svg" alt="Move wallet to cold wallet storage" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Phoenix → to on-chain wallet</h3>
         </div>
@@ -413,6 +440,9 @@
         </details>
       </div>
       <div class="svc-compat__tile" id="switch-to-another-wallet">
+        <div class="svc-compat__illustration">
+          <img src="/images/illustration/move-to-another-wallet.svg" alt="Move wallet to another wallet" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">Phoenix → to another Lightning wallet</h3>
         </div>
