--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -166,6 +166,9 @@
   <div class="svc-compat__grid">
 
       <div class="svc-compat__tile" id="setup-install">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/phoenix-install-full.webp" data-alt="1. Install and secure your wallet">
+          <img src="/images/screenshots/phoenix-install.webp" alt="1. Install and secure your wallet" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">1. Install and secure your wallet</h3>
         </div>
@@ -174,6 +177,9 @@
         <p><strong>Gotcha:</strong> Never upload the seed to email, chat apps, or cloud drives.</p>
       </div>
       <div class="svc-compat__tile" id="setup-receive">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/phoenix-receive-full.webp" data-alt="2. Receive your first sats">
+          <img src="/images/screenshots/phoenix-receive.webp" alt="2. Receive your first sats" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">2. Receive your first sats</h3>
         </div>
@@ -182,6 +188,9 @@
         <p><strong>Gotcha:</strong> First payment may open a channel and charge ~1,000 sat plus current mining fees if the network is busy.</p>
       </div>
       <div class="svc-compat__tile" id="setup-pay">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/phoenix-pay-full.webp" data-alt="3. Make a payment">
+          <img src="/images/screenshots/phoenix-pay.webp" alt="3. Make a payment" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">3. Make a payment</h3>
         </div>
@@ -735,6 +744,65 @@
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
   <script defer src="/js/migration.js"></script>
+
+<!-- Screenshot Lightbox -->
+<div id="screenshot-lightbox" class="screenshot-lightbox" aria-hidden="true" role="dialog" aria-modal="true" aria-label="Screenshot viewer">
+  <button class="screenshot-lightbox__close" aria-label="Close screenshot viewer">&times;</button>
+  <div class="screenshot-lightbox__content">
+    <img class="screenshot-lightbox__image" src="" alt="" />
+  </div>
+</div>
+<script>
+(function() {
+  const lightbox = document.getElementById('screenshot-lightbox');
+  if (!lightbox) return;
+  
+  const img = lightbox.querySelector('.screenshot-lightbox__image');
+  const closeBtn = lightbox.querySelector('.screenshot-lightbox__close');
+  
+  function openLightbox(fullPath, altText) {
+    img.src = fullPath;
+    img.alt = altText;
+    lightbox.setAttribute('aria-hidden', 'false');
+    lightbox.classList.add('active');
+    document.body.style.overflow = 'hidden';
+    closeBtn.focus();
+  }
+  
+  function closeLightbox() {
+    lightbox.setAttribute('aria-hidden', 'true');
+    lightbox.classList.remove('active');
+    document.body.style.overflow = '';
+    img.src = '';
+  }
+  
+  // Attach click handlers to all screenshot triggers
+  document.addEventListener('click', function(e) {
+    const trigger = e.target.closest('.screenshot-trigger');
+    if (trigger) {
+      e.preventDefault();
+      const fullPath = trigger.getAttribute('data-full');
+      const altText = trigger.getAttribute('data-alt') || '';
+      if (fullPath) openLightbox(fullPath, altText);
+    }
+  });
+  
+  // Close on overlay click
+  lightbox.addEventListener('click', function(e) {
+    if (e.target === lightbox) closeLightbox();
+  });
+  
+  // Close button
+  closeBtn.addEventListener('click', closeLightbox);
+  
+  // Keyboard: Esc to close
+  document.addEventListener('keydown', function(e) {
+    if (e.key === 'Escape' && lightbox.classList.contains('active')) {
+      closeLightbox();
+    }
+  });
+})();
+</script>
 </body>
 </html>
 
