services.json file split individual files

--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -173,7 +173,7 @@
           <h3 class="svc-compat__title">1. Install and secure your wallet</h3>
         </div>
         <div class="migration-meta"><span class="migration-meta-chip">Time: ~5 min</span><span class="migration-meta-chip">Cost: Free</span><span class="migration-meta-chip">Risk: Low</span></div>
-        <ol><li>Install Phoenix from App Store or Google Play (iOS 16+ or Android 8+)</li><li>Write down your 12-word seed on paper and store it away from your device</li><li>Enable biometric lock on your phone</li></ol>
+        <ol><li>Install Phoenix from App Store or Google Play</li><li>Write down your 12-word seed on paper and store it away from your device</li><li>Enable biometric lock on your phone</li></ol>
         <p><strong>Gotcha:</strong> Never upload the seed to email, chat apps, or cloud drives.</p>
       </div>
       <div class="svc-compat__tile" id="setup-receive">
