--- a/services/aqua.html
+++ b/services/aqua.html
@@ -44,7 +44,7 @@
 })();
 </script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/aqua.html#webpage","name":"Aqua — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/aqua.html","inLanguage":"en","description":"Aqua review: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/aqua.html#service"},"dateModified":"2025-11-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://aquawallet.io","mainEntityOfPage":"https://buoybitcoin.com/services/aqua.html#webpage","description":"Aqua is JAN3's mobile wallet that keeps Bitcoin, Liquid, and Lightning funds in one place. The app is self-custodial, so you write down a 12-word seed and control every transaction. Aqua leans on Liq…","image":"https://buoybitcoin.com/images/aqua.svg","applicationCategory":"Spend Bitcoin","areaServed":"Worldwide","downloadUrl":"https://apps.apple.com/us/app/aqua-wallet/id6468594241","operatingSystem":"iOS, Android","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Aqua","url":"https://aquawallet.io"},"datePublished":"2024-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Aqua","item":"https://buoybitcoin.com/services/aqua.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Getting started with Aqua","description":"Step-by-step guide to set up and start using Aqua.","url":"https://buoybitcoin.com/services/aqua.html#setup","step":[{"@type":"HowToStep","position":1,"name":"1. Install and create your wallet","text":"Download Aqua from the App Store or Google Play Create a new wallet and write the 12-word seed on paper Add an optional passphrase if you want an extra layer","description":"Time: ~5 min"},{"@type":"HowToStep","position":2,"name":"2. Add funds","text":"Choose Receive and pick Bitcoin, Liquid, or Lightning For large on-chain deposits, use Direct Peg-in to land funds directly as L-BTC Wait for confirmations before spending","description":"Time: ~10 min"},{"@type":"HowToStep","position":3,"name":"3. Pay or swap","text":"Tap Send and pick Lightning, Bitcoin, or USDt Review the quoted fee before confirming Use the swap screen to bridge USDt to other chains if required","description":"Time: ~1-3 min"}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Aqua","item":"https://buoybitcoin.com/services/aqua.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Getting started with Aqua","description":"Step-by-step guide to set up and start using Aqua.","url":"https://buoybitcoin.com/services/aqua.html#setup","step":[{"@type":"HowToStep","position":1,"name":"1. Install and create your wallet","text":"Download Aqua from the App Store or Google Play Create a new wallet and write the 12-word seed on paper Add an optional passphrase if you want an extra layer","description":"Time: ~5 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-install.webp"}},{"@type":"HowToStep","position":2,"name":"2. Add funds","text":"Choose Receive and pick Bitcoin, Liquid, or Lightning For large on-chain deposits, use Direct Peg-in to land funds directly as L-BTC Wait for confirmations before spending","description":"Time: ~10 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-receive.webp"}},{"@type":"HowToStep","position":3,"name":"3. Pay or swap","text":"Tap Send and pick Lightning, Bitcoin, or USDt Review the quoted fee before confirming Use the swap screen to bridge USDt to other chains if required","description":"Time: ~1-3 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-pay.webp"}}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
 <body>
   <div class="container">
  <header>
@@ -165,7 +165,10 @@
   <h2 class="feature-label">Getting started</h2>
   <div class="svc-compat__grid">
 
-      <div class="svc-compat__tile" id="setup-create">
+      <div class="svc-compat__tile" id="setup-install">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/aqua-install-full.webp" data-alt="1. Install and create your wallet">
+          <img src="/images/screenshots/aqua-install.webp" alt="1. Install and create your wallet" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">1. Install and create your wallet</h3>
         </div>
@@ -173,7 +176,10 @@
         <ol><li>Download Aqua from the App Store or Google Play</li><li>Create a new wallet and write the 12-word seed on paper</li><li>Add an optional passphrase if you want an extra layer</li></ol>
         <p><strong>Gotcha:</strong> Aqua cannot import seeds from other wallets, so keep this new phrase safe.</p>
       </div>
-      <div class="svc-compat__tile" id="setup-fund">
+      <div class="svc-compat__tile" id="setup-receive">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/aqua-receive-full.webp" data-alt="2. Add funds">
+          <img src="/images/screenshots/aqua-receive.webp" alt="2. Add funds" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">2. Add funds</h3>
         </div>
@@ -182,6 +188,9 @@
         <p><strong>Gotcha:</strong> Lightning receives run through Boltz, so expect a short delay and a swap fee when capacity is low.</p>
       </div>
       <div class="svc-compat__tile" id="setup-pay">
+        <div class="svc-compat__illustration screenshot-trigger" data-full="/images/screenshots/aqua-pay-full.webp" data-alt="3. Pay or swap">
+          <img src="/images/screenshots/aqua-pay.webp" alt="3. Pay or swap" loading="lazy" />
+        </div>
         <div class="svc-compat__header">
           <h3 class="svc-compat__title">3. Pay or swap</h3>
         </div>
@@ -219,16 +228,6 @@
         <details class="fee-card__learn-more">
           <summary data-open-text="Hide details" data-closed-text="Learn more">Learn more</summary>
           <div><p>Receiving Lightning through Aqua triggers a <a href="#term-boltz" class="glossary-link" data-term="Boltz swap">Boltz swap</a> that currently costs 0.25% plus the Liquid mining fee.</p></div>
-        </details>
-    </article>
-    <article class="fee-card" id="fees-usdt-swap">
-      <h3 class="fee-card__title">Move USDt to another chain</h3>
-      <p class="fee-card__cost"><strong>≈0.9% + provider network fees</strong></p>
-      <p class="fee-card__what">What happens:<br>Aqua hands the transfer to SideShift or Changelly, who convert Liquid USDt to the destination chain.</p>
-      <p class="fee-card__how">Save money:<br>Compare quotes and only bridge when you actually need funds on another network.</p>
-        <details class="fee-card__learn-more">
-          <summary data-open-text="Hide details" data-closed-text="Learn more">Learn more</summary>
-          <div><p>Swap partners set their own network fees, so conversions to chains like Ethereum or Tron cost more than staying on Liquid.</p></div>
         </details>
     </article>
   </div>
