--- a/services/fold.html
+++ b/services/fold.html
@@ -215,7 +215,10 @@
           <div><p>Transfers usually finish within 1-10 minutes (rarely up to 24 hours) and the USD balance is ready to swipe anywhere Visa is accepted.</p></div>
         </details>
     </article>
-    <article class="fee-card" id="fees-withdraw-btc">
+    <article class="fee-card" id="move-to-onchain">
+      <div class="svc-compat__illustration">
+        <img src="/images/illustration/wallet-to-cold-wallet.svg" alt="Move wallet to cold wallet storage" loading="lazy" />
+      </div>
       <h3 class="fee-card__title">Withdraw bitcoin to self-custody</h3>
       <p class="fee-card__cost"><strong>Bitcoin network miner fee (variable)</strong></p>
       <p class="fee-card__what">What happens:<br>Your withdrawal broadcasts on-chain and mines into a block; the deduction includes your amount plus the network fee.</p>
@@ -483,7 +486,7 @@
       </div>
     </div>
     <div>
-      <div class="feature-label sublabel">Insurance</div>
+      <div class="feature-label sublabel">Custody &amp; safeguarding</div>
       <div class="svc-compat__tile" id="trust-custody">
         <div class="trust-card-body">
           <img src="/images/insurance.svg" alt="" class="trust-card-icon" aria-hidden="true" />
