Key features added to Strike template

--- a/services/fold.html
+++ b/services/fold.html
@@ -324,7 +324,7 @@
   <h2 class="feature-label">What this Fold wallet can or can't do</h2>
   <div class="svc-compat__grid">
 
-      <div class="svc-compat__tile">
+      <div class="svc-compat__tile" id="pay-lightning">
         <div class="svc-compat__illustration">
           <img src="/images/illustration/pay-any-lightning-qr.svg" alt="Pay with Lightning" loading="lazy" />
         </div>
@@ -341,7 +341,7 @@
           </div>
         </details>
       </div>
-      <div class="svc-compat__tile">
+      <div class="svc-compat__tile" id="pay-onchain">
         <div class="svc-compat__illustration">
           <img src="/images/illustration/pay-on-chain.svg" alt="Pay on-chain" loading="lazy" />
         </div>
@@ -358,7 +358,7 @@
           </div>
         </details>
       </div>
-      <div class="svc-compat__tile">
+      <div class="svc-compat__tile" id="receive-lightning">
         <div class="svc-compat__illustration">
           <img src="/images/illustration/receive.svg" alt="Receive on Lightning" loading="lazy" />
         </div>
@@ -375,7 +375,7 @@
           </div>
         </details>
       </div>
-      <div class="svc-compat__tile">
+      <div class="svc-compat__tile" id="receive-onchain">
         <div class="svc-compat__illustration">
           <img src="/images/illustration/receive-on-chain.svg" alt="Receive on-chain" loading="lazy" />
         </div>
